@@ -94,11 +94,17 @@ public class SocketInitiator implements Initiator {
         doStart();
     }
 
+    public void blockingStart() throws RuntimeError, ConfigError {
+        doBlockingStart();
+    }
+
     public void stop() {
         doStop();
     }
 
     private native void doStart() throws RuntimeError, ConfigError;
+
+    private native void doBlockingStart() throws RuntimeError, ConfigError;
 
     private native void doStop();
 }
